[package]
name = "rotary-add"
version = "0.1.3"
edition = "2021"
description = "This crate adds a few simple methods to the three lowest unsigned integer types, u8, u16 and u32 to allow cyclical addition and subtraction around the same 0 to (limit - 1) range or from 1 to a limit"
repository = "https://github.com/neilg63/rotary-add"
categories = ["mathematics", "cryptography"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
